# letter-recognition

./: .gitignore  LICENSE  README.md  detection.py  detection_commented.py  detection_simple.py  draw_predict.py  extract.py  pyproject.toml  requirements.txt  tf_gpu_test.py
all_models/: CNN_model.keras  CNN_model_bigdata.keras  feedforward_model.keras  feedforward_model_bigdata.keras
letters/: get_data.py
