[project]
name = "letter-recognition"
version = "0.1.0"
description = "Python scripts for letter recognition using machine learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
